--- a/style.css
+++ b/style.css
@@ -55,8 +55,8 @@ a img { border: none; }
 -------------------------------------------------------------- */
 
 body {
-	background:#000;
-	color:#FFF;
+	background:#EB36E2;
+	color:#87EB36;
 	top: 0;
 	left: 0;
 	width: 100%;
@@ -66,7 +66,7 @@ body {
 }
 a {
 	text-decoration:none;
-	color: #FE8F45;
+	color: #FFF42D;
 }
 a:hover { text-decoration: underline; }
 em {
